--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+# DD SDK html
+DoctorDumpSDK/docs/html
+
 # Build results
 [Dd]ebug/
 [Dd]ebug_cc/
