--- a/cheatdll/cheatdll.vcxproj
+++ b/cheatdll/cheatdll.vcxproj
@@ -294,6 +294,7 @@
     <ClInclude Include="aibuilders.h" />
     <ClInclude Include="aicommandunits.h" />
     <ClInclude Include="aigoals.h" />
+    <ClInclude Include="ailog.h" />
     <ClInclude Include="aisnx.h" />
     <ClInclude Include="aiunitcount.h" />
     <ClInclude Include="animatedterrain.h" />
@@ -341,6 +342,7 @@
     <ClInclude Include="mapsize.h" />
     <ClInclude Include="medic.h" />
     <ClInclude Include="common.h" />
+    <ClInclude Include="menu.h" />
     <ClInclude Include="mg1file.h" />
     <ClInclude Include="minimap.h" />
     <ClInclude Include="mouseoverride.h" />
@@ -371,6 +373,7 @@
     <ClInclude Include="savegamever.h" />
     <ClInclude Include="scroll.h" />
     <ClInclude Include="slp.h" />
+    <ClInclude Include="sngoal.h" />
     <ClInclude Include="spregen.h" />
     <ClInclude Include="startupload.h" />
     <ClInclude Include="stdafx.h" />
@@ -397,6 +400,8 @@
     <ClCompile Include="aibuilders.cpp" />
     <ClCompile Include="aicommandunits.cpp" />
     <ClCompile Include="aigoals.cpp" />
+    <ClCompile Include="ailog.cpp" />
+    <ClCompile Include="aipower.cpp" />
     <ClCompile Include="aisnx.cpp" />
     <ClCompile Include="aiunitcount.cpp" />
     <ClCompile Include="animatedterrain.cpp" />
@@ -465,6 +470,7 @@
     <ClCompile Include="mapsize.cpp" />
     <ClCompile Include="medic.cpp" />
     <ClCompile Include="common.cpp" />
+    <ClCompile Include="menu.cpp" />
     <ClCompile Include="mg1file.cpp" />
     <ClCompile Include="minimap.cpp" />
     <ClCompile Include="mouseoverride.cpp" />
@@ -495,6 +501,7 @@
     <ClCompile Include="savegamever.cpp" />
     <ClCompile Include="scroll.cpp" />
     <ClCompile Include="slp.cpp" />
+    <ClCompile Include="sngoal.cpp" />
     <ClCompile Include="spregen.cpp" />
     <ClCompile Include="startupload.cpp" />
     <ClCompile Include="stdafx.cpp">
