--- a/cheatdll/cheatdll.vcxproj
+++ b/cheatdll/cheatdll.vcxproj
@@ -128,6 +128,7 @@
       <StructMemberAlignment>4Bytes</StructMemberAlignment>
       <AdditionalIncludeDirectories>$(SolutionDir)DoctorDumpSDK\include;C:\Users\Vasya\Documents\zlib-1.2.11;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <FloatingPointModel>Fast</FloatingPointModel>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -149,6 +150,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;CHEATDLL_EXPORTS;_CRT_SECURE_NO_WARNINGS;_CHEATDLL_CC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <StructMemberAlignment>4Bytes</StructMemberAlignment>
       <AdditionalIncludeDirectories>$(SolutionDir)DoctorDumpSDK\include;C:\Users\Vasya\Documents\zlib-1.2.11;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <FloatingPointModel>Fast</FloatingPointModel>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -180,6 +182,7 @@
       <EnableParallelCodeGeneration>false</EnableParallelCodeGeneration>
       <AdditionalOptions>
       </AdditionalOptions>
+      <FloatingPointModel>Fast</FloatingPointModel>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -214,6 +217,7 @@
       <EnableParallelCodeGeneration>false</EnableParallelCodeGeneration>
       <AdditionalOptions>
       </AdditionalOptions>
+      <FloatingPointModel>Fast</FloatingPointModel>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -243,6 +247,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)DoctorDumpSDK\include;C:\Users\Vasya\Documents\zlib-1.2.11;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
       <StringPooling>true</StringPooling>
+      <FloatingPointModel>Fast</FloatingPointModel>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -270,6 +275,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)DoctorDumpSDK\include;C:\Users\Vasya\Documents\zlib-1.2.11;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
       <StringPooling>true</StringPooling>
+      <FloatingPointModel>Fast</FloatingPointModel>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -327,6 +333,7 @@
     <ClInclude Include="elevation.h" />
     <ClInclude Include="expldroid.h" />
     <ClInclude Include="filenames.h" />
+    <ClInclude Include="fixedpos.h" />
     <ClInclude Include="flare.h" />
     <ClInclude Include="gamemode.h" />
     <ClInclude Include="gamespeed.h" />
@@ -337,6 +344,7 @@
     <ClInclude Include="iuserpatch.h" />
     <ClInclude Include="jedimaster.h" />
     <ClInclude Include="langdll.h" />
+    <ClInclude Include="localisation.h" />
     <ClInclude Include="log.h" />
     <ClInclude Include="mapcopy.h" />
     <ClInclude Include="mapsize.h" />
@@ -376,7 +384,9 @@
     <ClInclude Include="sngoal.h" />
     <ClInclude Include="spregen.h" />
     <ClInclude Include="startupload.h" />
+    <ClInclude Include="statusscreen.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="storemode.h" />
     <ClInclude Include="structs.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="techupcolor.h" />
@@ -388,6 +398,7 @@
     <ClInclude Include="triggerdesc.h" />
     <ClInclude Include="trigger_unit.h" />
     <ClInclude Include="versionselect.h" />
+    <ClInclude Include="video.h" />
     <ClInclude Include="votepanel.h" />
     <ClInclude Include="wndmode.h" />
     <ClInclude Include="wndproc.h" />
@@ -454,6 +465,7 @@
     <ClCompile Include="elevation.cpp" />
     <ClCompile Include="expldroid.cpp" />
     <ClCompile Include="filenames.cpp" />
+    <ClCompile Include="fixedpos.cpp" />
     <ClCompile Include="flare.cpp" />
     <ClCompile Include="gamemode.cpp" />
     <ClCompile Include="gamespeed.cpp" />
@@ -465,9 +477,11 @@
     <ClCompile Include="jedimaster.cpp" />
     <ClCompile Include="keyboard.cpp" />
     <ClCompile Include="langdll.cpp" />
+    <ClCompile Include="localisation.cpp" />
     <ClCompile Include="log.cpp" />
     <ClCompile Include="mapcopy.cpp" />
     <ClCompile Include="mapsize.cpp" />
+    <ClCompile Include="mbs.cpp" />
     <ClCompile Include="medic.cpp" />
     <ClCompile Include="common.cpp" />
     <ClCompile Include="menu.cpp" />
@@ -504,6 +518,7 @@
     <ClCompile Include="sngoal.cpp" />
     <ClCompile Include="spregen.cpp" />
     <ClCompile Include="startupload.cpp" />
+    <ClCompile Include="statusscreen.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug_cc|Win32'">Create</PrecompiledHeader>
@@ -512,6 +527,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release_cc|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release_cc_compatible|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="storemode.cpp" />
     <ClCompile Include="techupcolor.cpp" />
     <ClCompile Include="terrain.cpp" />
     <ClCompile Include="terrain_blend.cpp" />
@@ -523,6 +539,7 @@
     <ClCompile Include="triggerdesc.cpp" />
     <ClCompile Include="trigger_unit.cpp" />
     <ClCompile Include="versionselect.cpp" />
+    <ClCompile Include="video.cpp" />
     <ClCompile Include="votepanel.cpp" />
     <ClCompile Include="wndmode.cpp" />
     <ClCompile Include="wndproc.cpp" />
